# latex_docs

./: .gitignore  CMakeLists.txt  README.md  clean.sh
cmake/Modules/: UseLATEX.cmake
papers/: CMakeLists.txt
papers/JayResume/: CMakeLists.txt  JayResume.tex
papers/LetterOfRecommendation-AllenAyala/: CMakeLists.txt  LetterOfRecommendation-AllenAyala.tex.aes
papers/LetterOfRecommendation-Template/: CMakeLists.txt  LetterOfRecommendation-Template.tex
papers/SGarcia_CV/: SGarcia-Resume-February2023.tex  SGarcia-Resume-March2023.tex  SGarcia-Resume-October2025.tex  SGarcia-Resume-September2025.tex  SGarcia_CV-RSTAutomation.tex  SGarcia_CV.tex  resume.cls
papers/SGarcia_ECE_Dissertation/: CMakeLists.txt  SGarcia_ECE_Dissertation.dvi  SGarcia_ECE_Dissertation.lof  SGarcia_ECE_Dissertation.lot  SGarcia_ECE_Dissertation.tex.aes  gatech-thesis.cls  references_fullentries.bib  references_fullentries_old.bib
papers/SGarcia_ECE_Dissertation/figs/: IMIScoresperCategory.eps  README.txt
papers/WCAG-Compliance-Guide/: CMakeLists.txt  WCAG-Compliance-Guide.html  WCAG-Compliance-Guide.tex  htlatex_test.html  htlatex_test.tex  tagpdf_test.tex
papers/barrier_certificates_presentation/: CMakeLists.txt  barrier_certificates_presentation.tex
papers/playground/: CMakeLists.txt  playground.tex
papers/upwork/TikZFigures/: CMakeLists.txt  TikZFigures.tex
